bin/testsuite/tests/compiler/src/errors/compiler3115.swg
#global testerror "Err0120"
struct AA {}

public func toto3115()->AA
{
    let result: retval
    return result
}
